Use integers for volume control + API volume getter
